[metadata]
name = python-dos-like
version = 0.0.0
description = Python bindings for the dos-like programming library
author = kvance
author_email = kvance@kvance.com
url = https://github.com/cknave/python-dos-like
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries

[options]
packages =
    dos_like
setup_requires =
    cffi>=1.15.1,<2
install_requires =
    aenum>=3.1.11,<4
    cffi>=1.15.1,<2
    typing-extensions>=4.3.0;python_version<'3.10'

[options.extras_require]
dev =
    build>=0.8.0,<1
    coverage==6.4.3
    twine==4.0.1,<5
    yapf==0.32.0

[coverage:run]
branch = yes
concurrency = thread
omit = tests/*

[coverage:report]
show_missing = yes

[yapf]
allow_split_before_dict_value = false
indent_dictionary_value = true
