[metadata]
name = python-dos-like
version = 0.0.2
description = Python bindings for the dos-like programming library
long_description = file: README.rst
long_description_content_type = text/x-rst
author = kvance
author_email = kvance@kvance.com
url = https://github.com/cknave/python-dos-like
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries

[options]
packages =
    dos_like
setup_requires =
    cffi>=1.15.1,<2
install_requires =
    aenum>=3.1.11,<4
    cffi>=1.15.1,<2
    typing-extensions>=4.3.0;python_version<'3.10'

[options.extras_require]
dev =
    build>=0.8.0,<1
    coverage==6.4.3
    flake8==5.0.4
    flake8-comprehensions==3.10.0
    flake8-import-order==0.18.1
    flake8-quotes==3.3.1
    mypy==.971
    sphinx==5.1.1
    sphinx-toolbox==3.1.2
    sphinx-rtd-theme==1.0.0
    twine==4.0.1,<5
    yapf==0.32.0

[coverage:run]
branch = yes
concurrency = thread
omit = tests/*

[coverage:report]
exclude_lines =
    if typing.TYPE_CHECKING:
    pragma: no cover
fail_under = 98
show_missing = yes

[flake8]
application_import_names = dos_like,tests
exclude = build,dist,dos_like/build.py,example.py,.*
import_order_style = pycharm

[mypy]
mypy_path = stubs

[yapf]
allow_split_before_dict_value = false
indent_dictionary_value = true
